--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/ParkingDB
+spring.datasource.url=jdbc:mysql://localhost:3306/parkingdb
 spring.datasource.username=root
 spring.datasource.password=dotdot123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
