--- a/front/package.json
+++ b/front/package.json
@@ -22,7 +22,8 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "^0.72.5",
+    "react-native-cookies": "^3.3.0",
     "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-paper": "^5.10.6",
@@ -30,8 +31,10 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-status-bar-height": "^2.6.0",
+    "react-native-table-component": "^1.2.2",
     "react-native-web": "~0.19.6",
-    "react-navigation": "^5.0.0"
+    "react-navigation": "^5.0.0",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
