--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@firebase/app": "^0.9.20",
+    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-firebase/messaging": "^18.5.0",
+    "axios": "^1.5.1",
     "expo": "~49.0.11",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-push-notification": "^8.1.1",
     "react-native-table-component": "^1.2.2"
   },
   "devDependencies": {
