added qr code scanning and occupying parking lot functionalities

--- a/front/app.json
+++ b/front/app.json
@@ -8,6 +8,14 @@
       "expo-router"
     ],
     "name": "view",
-    "slug": "view"
+    "slug": "view",
+    "android": {
+      "permissions": ["CAMERA"]
+    },
+    "ios": {
+      "infoPlist": {
+        "NSCameraUsageDescription": "Your message explaining why you need camera access"
+      }
+    }
   }
 }
