--- a/front/package.json
+++ b/front/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@react-navigation/stack": "^6.3.18",
     "axios": "^1.5.1",
+    "base-64": "^1.0.0",
     "expo": "^49.0.3",
+    "expo-barcode-scanner": "^12.7.0",
     "expo-constants": "~14.4.2",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
@@ -22,11 +24,14 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.72.5",
+    "react-native": "0.72.6",
+    "react-native-camera": "^4.2.1",
     "react-native-cookies": "^3.3.0",
     "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-paper": "^5.10.6",
+    "react-native-permissions": "^4.0.0",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
