--- a/front/package.json
+++ b/front/package.json
@@ -11,25 +11,23 @@
     "android-dev": "adb reverse tcp:8080 tcp:8080 && react-native run- android"
   },
   "dependencies": {
-    "@react-navigation/stack": "^6.3.18",
-    "axios": "^1.5.1",
+    "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.2",
     "base-64": "^1.0.0",
-    "expo": "^49.0.3",
-    "expo-barcode-scanner": "^12.7.0",
+    "expo": "^49.0.21",
+    "expo-barcode-scanner": "~12.5.3",
     "expo-constants": "~14.4.2",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
-    "expo-router": "2.0.0",
-    "expo-splash-screen": "~0.20.4",
+    "expo-router": "^2.0.14",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-camera": "^4.2.1",
-    "react-native-cookies": "^3.3.0",
     "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-paper": "^5.10.6",
+    "react-native-paper": "^5.11.3",
     "react-native-permissions": "^4.0.0",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-reanimated": "~3.3.0",
@@ -37,12 +35,12 @@
     "react-native-screens": "~3.22.0",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-table-component": "^1.2.2",
-    "react-native-web": "~0.19.6",
+    "react-native-web": "~0.19.9",
     "react-navigation": "^5.0.0",
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
+    "@babel/core": "^7.23.5",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
   },
   "resolutions": {
