--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/parkingdb_main
+spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:13709/parkingdb_main
 spring.datasource.username=root
-spring.datasource.password=dotdot123
+spring.datasource.password=${{MYSQL_PASS}}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
