--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:13709/parkingdb_main
 spring.datasource.username=root
-spring.datasource.password=${{MYSQL_PASS}}
+spring.datasource.password=-cf2E3BhBbggfadaegEgCDHFC22A3Ed3
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=validate
